# Promptly

./: .gitignore  docker-compose.yaml
backend/: .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt  setup.py
backend/app/clients/: mongo_client.py
backend/app/routes/: __init__.py  task_routes.py
backend/app/services/: agent_service.py  agent_utils.py
backend/promptly.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
backend/promptly/clients/: api_client.py
backend/promptly/routes/: task_routes.py
backend/promptly/services/: __init__.py  agent_service.py  agent_utils.py
backend/tests/: test_agent_service.py  test_api_client.py  test_imports.py  test_main.py
frontend/: .env.example  Dockerfile  eslint.config.mjs  package-lock.json  package.json  robots.txt
frontend/app/: LandingClient.tsx  layout.tsx  page.tsx
frontend/app/contact/: ContactFormEmailJS.tsx  page.tsx
frontend/app/docs/: page.tsx
frontend/app/privacy/: page.tsx
frontend/app/scraper/: page.tsx
frontend/app/terms/: page.tsx
frontend/components/: ChatHistorySidebar.tsx  ChatMessages.tsx  EditEndpoint.tsx  EmptyMessages.tsx  EndpointCard.tsx  Header.tsx  HoverSidebar.tsx  InputSection.tsx  ResultCard.tsx
frontend/components/landing/: BackgroundElements.tsx  CTASection.tsx  DetailedFeaturesSection.tsx  FAQSection.tsx  FeaturesSection.tsx  Footer.tsx  HeroSection.tsx  HowItWorksSection.tsx  Navigation.tsx  ProgressBarAndScrollButton.tsx  StatsSection.tsx  UseCasesSection.tsx
