[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptly"
version = "0.1.0"
description = "Promptly: Agentic web scraper and data extractor made easy"
authors = [ { name = "Arin Sood", email = "your@email.com" } ]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["web scraping", "agents", "data extraction", "fastapi", "promptly"]
classifiers = [
	"Programming Language :: Python :: 3",
	"License :: OSI Approved :: MIT License",
	"Operating System :: OS Independent",
]
dependencies = [
	"fastapi==0.111.0",
	"requests==2.32.3",
	"uvicorn==0.30.1",
	"groq==0.30.0",
	"pydantic-settings==2.3.0",
	"beautifulsoup4",
	"selenium",
	"python-dotenv",
	"pymongo[srv]",
	"arcadepy",
	"sentence-transformers",
	"scikit-learn",
    "pytest",
]